// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Membership should render 1`] = `
<div>
  <div
    class="card card-root segment-membership-root"
  >
    <div
      class="card-header"
    >
      <div
        class="card-title"
      >
        Segment Membership
      </div>
    </div>
    <div
      class="card-body segment-growth-root no-padding"
    >
      <div
        class="segment-growth-chart-container"
      >
        <div
          class="composed-chart-with-empty-state"
        >
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 360px; min-width: 0;"
          />
        </div>
      </div>
      <div
        class="selected-point-info"
      >
        <div
          class="h4"
        >
          Known Members
        </div>
      </div>
      <div
        class="base-results-root d-flex flex-column flex-grow-1 searchable-table-root searchable-table-borderless"
      >
        <div
          class="toolbar-root"
        >
          <nav
            class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
          >
            <div
              class="container-fluid"
            >
              <ul
                class="nav-root front-nav navbar-nav"
                role="tablist"
              />
              <div
                class="navbar-form navbar-form-autofit mx-2"
              >
                <div
                  class="input-group search"
                >
                  <div
                    class="input-group-item"
                  >
                    <input
                      class="input-root form-control input-group-inset input-group-inset-after"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <div
                      class="input-group-inset-item input-group-inset-item-after"
                    >
                      <button
                        aria-label="Search"
                        class="button-root btn btn-unstyled"
                        type="button"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-search icon-root"
                          role="presentation"
                        >
                          <use
                            href="#search"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nav>
        </div>
        <div
          class="flex-grow-1 mx-4 table-root"
        >
          <div
            class="table-responsive"
          >
            <table
              class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
            >
              <thead>
                <tr>
                  <th
                    class="table-head-title"
                  >
                    <button
                      class="inline-item text-truncate-inline btn btn-unstyled"
                      type="button"
                    >
                      <div
                        class="align-items-center d-flex justify-content-between"
                      >
                        <div
                          class="text-truncate"
                        >
                          Name
                        </div>
                        <button
                          aria-label="Ascending"
                          class="component-action ml-2 btn btn-sm btn-primary"
                          type="button"
                        >
                          <svg
                            class="lexicon-icon lexicon-icon-order_arrow_ascending icon-root"
                            role="presentation"
                          >
                            <use
                              href="#order_arrow_ascending"
                            />
                          </svg>
                        </button>
                      </div>
                    </button>
                  </th>
                  <th
                    class="table-head-title"
                  >
                    Email
                  </th>
                  <th
                    class="table-head-title"
                  >
                    <button
                      class="inline-item text-truncate-inline btn btn-unstyled"
                      type="button"
                    >
                      <div
                        class="align-items-center d-flex justify-content-between"
                      >
                        <div
                          class="text-truncate"
                        >
                          First Seen
                        </div>
                        <button
                          aria-label="Descending"
                          class="component-action ml-2 btn btn-sm btn-primary"
                          type="button"
                        >
                          <span
                            class="opacity-25"
                          >
                            <svg
                              class="lexicon-icon lexicon-icon-order-arrow icon-root"
                              role="presentation"
                            >
                              <use
                                href="#order-arrow"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </button>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class="name-cell-root"
                  >
                    <div
                      class="content-container"
                    >
                      <div
                        class="text-truncate"
                      >
                        <div
                          class="table-title text-truncate"
                        >
                          Foo Bar
                        </div>
                      </div>
                    </div>
                  </td>
                  <td>
                    -
                  </td>
                  <td>
                    Jul 8, 2018
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <nav
          class="navbar navbar-root pagination-bar-root"
        >
          <div
            class="container-fluid"
          >
            <div
              class="dropdown dropdown-root pagination-items-per-page"
            >
              <button
                aria-controls="clay-dropdown-menu-1"
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle button-root btn btn-sm btn-secondary"
                type="button"
              >
                20 Items
                <svg
                  class="lexicon-icon lexicon-icon-caret-bottom ml-2"
                  role="presentation"
                >
                  <use
                    href="#caret-bottom"
                  />
                </svg>
              </button>
            </div>
            <div
              class="pagination-results"
            >
              Showing 1 to 1 of 1 entry.
            </div>
            <ul
              class="pagination pagination-root"
            >
              <li
                class="page-item disabled"
              >
                <button
                  class="button-root btn btn-unstyled page-link btn btn-primary"
                  disabled=""
                  href=""
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-left-small icon-root"
                    role="presentation"
                  >
                    <use
                      href="#angle-left-small"
                    />
                  </svg>
                </button>
              </li>
              <li
                class="page-item active"
              >
                <button
                  class="button-root btn btn-unstyled page-link btn btn-primary"
                  href=""
                  type="button"
                >
                  1
                </button>
              </li>
              <li
                class="page-item disabled"
              >
                <button
                  class="button-root btn btn-unstyled page-link btn btn-primary"
                  disabled=""
                  href=""
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                    role="presentation"
                  >
                    <use
                      href="#angle-right-small"
                    />
                  </svg>
                </button>
              </li>
            </ul>
          </div>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`MembershipChart should render 1`] = `
<div>
  <div
    class="card-body segment-growth-root no-padding"
  >
    <div
      class="segment-growth-chart-container"
    >
      <div
        class="composed-chart-with-empty-state"
      >
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 360px; min-width: 0;"
        />
      </div>
    </div>
    <div
      class="selected-point-info"
    >
      <div
        class="h4"
      >
        Known Members
      </div>
    </div>
    <div
      class="base-results-root d-flex flex-column flex-grow-1 searchable-table-root searchable-table-borderless"
    >
      <div
        class="toolbar-root"
      >
        <nav
          class="navbar navbar-root my-2 management-bar management-bar-light navbar-expand"
        >
          <div
            class="container-fluid"
          >
            <ul
              class="nav-root front-nav navbar-nav"
              role="tablist"
            />
            <div
              class="navbar-form navbar-form-autofit mx-2"
            >
              <div
                class="input-group search"
              >
                <div
                  class="input-group-item"
                >
                  <input
                    class="input-root form-control input-group-inset input-group-inset-after"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      aria-label="Search"
                      class="button-root btn btn-unstyled"
                      type="button"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-search icon-root"
                        role="presentation"
                      >
                        <use
                          href="#search"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </div>
      <div
        class="flex-grow-1 mx-4 table-root"
      >
        <div
          class="table-responsive"
        >
          <table
            class="table table-autofit table-striped table-list table-nowrap table-head-bordered table-hover"
          >
            <thead>
              <tr>
                <th
                  class="table-head-title"
                >
                  <button
                    class="inline-item text-truncate-inline btn btn-unstyled"
                    type="button"
                  >
                    <div
                      class="align-items-center d-flex justify-content-between"
                    >
                      <div
                        class="text-truncate"
                      >
                        Name
                      </div>
                      <button
                        aria-label="Ascending"
                        class="component-action ml-2 btn btn-sm btn-primary"
                        type="button"
                      >
                        <svg
                          class="lexicon-icon lexicon-icon-order_arrow_ascending icon-root"
                          role="presentation"
                        >
                          <use
                            href="#order_arrow_ascending"
                          />
                        </svg>
                      </button>
                    </div>
                  </button>
                </th>
                <th
                  class="table-head-title"
                >
                  Email
                </th>
                <th
                  class="table-head-title"
                >
                  <button
                    class="inline-item text-truncate-inline btn btn-unstyled"
                    type="button"
                  >
                    <div
                      class="align-items-center d-flex justify-content-between"
                    >
                      <div
                        class="text-truncate"
                      >
                        First Seen
                      </div>
                      <button
                        aria-label="Descending"
                        class="component-action ml-2 btn btn-sm btn-primary"
                        type="button"
                      >
                        <span
                          class="opacity-25"
                        >
                          <svg
                            class="lexicon-icon lexicon-icon-order-arrow icon-root"
                            role="presentation"
                          >
                            <use
                              href="#order-arrow"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </button>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
              >
                <td
                  class="name-cell-root"
                >
                  <div
                    class="content-container"
                  >
                    <div
                      class="text-truncate"
                    >
                      <div
                        class="table-title text-truncate"
                      >
                        Foo Bar
                      </div>
                    </div>
                  </div>
                </td>
                <td>
                  -
                </td>
                <td>
                  Jul 8, 2018
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <nav
        class="navbar navbar-root pagination-bar-root"
      >
        <div
          class="container-fluid"
        >
          <div
            class="dropdown dropdown-root pagination-items-per-page"
          >
            <button
              aria-controls="clay-dropdown-menu-2"
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle button-root btn btn-sm btn-secondary"
              type="button"
            >
              20 Items
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom ml-2"
                role="presentation"
              >
                <use
                  href="#caret-bottom"
                />
              </svg>
            </button>
          </div>
          <div
            class="pagination-results"
          >
            Showing 1 to 1 of 1 entry.
          </div>
          <ul
            class="pagination pagination-root"
          >
            <li
              class="page-item disabled"
            >
              <button
                class="button-root btn btn-unstyled page-link btn btn-primary"
                disabled=""
                href=""
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-angle-left-small icon-root"
                  role="presentation"
                >
                  <use
                    href="#angle-left-small"
                  />
                </svg>
              </button>
            </li>
            <li
              class="page-item active"
            >
              <button
                class="button-root btn btn-unstyled page-link btn btn-primary"
                href=""
                type="button"
              >
                1
              </button>
            </li>
            <li
              class="page-item disabled"
            >
              <button
                class="button-root btn btn-unstyled page-link btn btn-primary"
                disabled=""
                href=""
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-angle-right-small icon-root"
                  role="presentation"
                >
                  <use
                    href="#angle-right-small"
                  />
                </svg>
              </button>
            </li>
          </ul>
        </div>
      </nav>
    </div>
  </div>
</div>
`;
